<resources>
    <string name="app_name">InteLjud</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="l_gg_till_ny_kund">Lägg till ny kund</string>
    <string name="l_gg_till_ny_best_llning">Lägg till ny beställning</string>
    <string name="kund_namn">Kund Namn</string>
    <string name="kund_id">Kund ID</string>
    <string name="n_sta">Nästa</string>
    <string name="f_retag">Företag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_delsenummer">Födelsenummer</string>
    <string name="avdelning">Avdelning</string>
    <string name="efternamn">Efternamn</string>
    <string name="f_rnamn">Förnamn</string>
    <string name="h_rmed_godk_nner_jag_att_mina_ronavtryck_och_personuppgifter_sparas_f_r_ny_och_efterbest_llning_av_formgjutna_produkter_fr_n_hear_nordic">Härmed godkänner jag att mina öronavtryck och personuppgifter sparas för ny och efterbeställning av formgjutna produkter från HEAR Nordic.</string>
    <string name="hearsafer">HEARsafer</string>
    <string name="nedan_r_de_olika_val_som_kan_g_ras">Nedan är de olika val som kan göras:</string>
    <string name="f_rgval_v_nster_sida">Färgval vänster sida</string>
    <string name="f_rgval_h_ger_sida">Färgval höger sida</string>
    <string name="val_nedan_inneb_r_extrakostnader">Val nedan innebär extrakostnader</string>
    <string name="concha_telefonsn_cka">Concha / Telefonsnäcka</string>
    <string name="med_f_ste_f_r_sn_re">Med fäste för snöre</string>
    <string name="f_retagsnamn">Företagsnamn</string>
    <string name="kundnummer">Kundnummer</string>
    <string name="ort">Ort</string>
    <string name="kund_orderinformation">Kund-/orderinformation</string>
    <string name="g_till_personal">Gå till personal</string>
    <string name="avbryt">avbryt</string>
    <string name="datum">Datum</string>
    <string name="datum1">Datum<font color='#FF0000'>*</font></string>
    <string name="kund">Kund</string>
    <string name="ordernummer">Ordernummer</string>
    <string name="hear_nordic_nr">Hear Nordic Nr:</string>
    <string name="spara">Spara</string>
    <string name="val_markerade_med_inneb_r_extra_kostnad">Val markerade med * innebär extra kostnad</string>
    <string name="detect">Detect</string>
    <string name="trippel_set">Trippel-set</string>
    <string name="kommentar">Kommentar</string>
    <string name="filter_kod">Filterkod:</string>
    <string name="h_ssleholm">Hässleholm</string>
    <string name="ta_bort_person">Ta bort person</string>
    <string name="redigera_person">Redigera person</string>
    <string name="nedan_r_diverse_produktval_kopplade_till_dina_ronavgjutningar">Nedan är diverse produktval kopplade till dina öronavgjutningar:</string>
    <string name="val_ovan_markerade_med_inneb_r_extrakostader">Val ovan markerade med (*) innebär extrakostader</string>
</resources>